# daps-ui

./: .gitignore  Dockerfile  docker-compose.yml  main.py  progress.py  pyproject.toml
DapsEX/: __init__.py  database_cache.py  payload.py  poster_renamerr.py  run_cli.py  utils.py  yaml_config.py
config/: config.yaml
daps_ui/: __init__.py  config.py  main.py  poster_renamerr.py  utils.py
daps_webui/: __init__.py
daps_webui/config/: config.py
daps_webui/models/: __init__.py  plex_instance.py  radarr_instance.py  settings.py  sonarr_instance.py
daps_webui/static/css/: layout.css
daps_webui/static/css/poster_renamer/: poster_renamer.css
daps_webui/static/css/settings/: settings.css
daps_webui/static/js/home/: index.js
daps_webui/static/js/poster_renamer/: poster_renamer.js
daps_webui/static/js/settings/: settings.js
daps_webui/templates/: layout.html
daps_webui/templates/home/: index.html
daps_webui/templates/poster_renamer/: poster_renamer.html
daps_webui/templates/settings/: settings.html
daps_webui/utils/: logger_utils.py  webui_utils.py
daps_webui/views/home/: home.py
daps_webui/views/poster_renamer/: poster_renamer.py
daps_webui/views/settings/: settings.py
